Update access modifiers to follow common practices. Add a simple error handler
Update U class to have validators. Update src/main/resources/static/v3/api-docs.json.
Add application-dev.properties.
