# src/main/resources/static/v3/api-docs.json
@@ -1,5 +1,5 @@
 {
-  "openapi": "3.0.0",
+  "openapi": "3.1.0",
   "info": {
     "title": "U Service API",
     "description": "A service for managing `U` (user) instances.",
@@ -7,21 +7,20 @@
   },
   "servers": [
     {
-      "url": "http://localhost:8080/api/v1/",
+      "url": "http://localhost:8080/api/v1",
       "description": "Localhost server"
     }
   ],
   "tags": [
     {
-      "name": "main",
-      "description": "Main operations"
+      "name": "u-controller"
     }
   ],
   "paths": {
     "/u": {
       "get": {
         "tags": [
-          "main"
+          "u-controller"
         ],
         "summary": "Get all U instances",
         "responses": {
@@ -29,7 +28,12 @@
             "description": "Successful response",
             "content": {
               "application/json": {
-                "example": []
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/U"
+                  }
+                }
               }
             }
           },
@@ -40,25 +44,15 @@
       },
       "post": {
         "tags": [
-          "main"
+          "u-controller"
         ],
         "summary": "Create a new U instance",
         "requestBody": {
           "required": true,
           "content": {
             "application/json": {
-              "example": {
-                "email": "example@example.com",
-                "nickname": "ExampleUser",
-                "dateOfBirth": "1990-01-01",
-                "nativeLanguage": "English",
-                "subscription": "Free",
-                "registrationMethod": "Email",
-                "isActive": true,
-                "verificationCode": "ABC123",
-                "words": [
-                  "c2d5b7e8-b7b9-4fb4-8248-39904ccce3b7"
-                ]
+              "schema": {
+                "$ref": "#/components/schemas/U"
               }
             }
           }
@@ -86,7 +80,8 @@
             }
           },
           "400": {
-            "description": "U instance not created, invalid request body provided"
+            "description": "U instance not created, invalid request body provided",
+            "example": ""
           }
         }
       }
@@ -94,7 +89,7 @@
     "/u/{id}": {
       "get": {
         "tags": [
-          "main"
+          "u-controller"
         ],
         "summary": "Get a specific U instance by ID",
         "parameters": [
@@ -105,7 +100,7 @@
             "schema": {
               "type": "string"
             },
-            "example": 123
+            "example": "5fa51ebe-10f8-4b14-9409-996ef9140395"
           }
         ],
         "responses": {
@@ -114,7 +109,7 @@
             "content": {
               "application/json": {
                 "example": {
-                  "id": 123,
+                  "id": "5fa51ebe-10f8-4b14-9409-996ef9140395",
                   "email": "example@example.com",
                   "nickname": "ExampleUser",
                   "dateOfBirth": "1990-01-01",
@@ -134,7 +129,7 @@
       },
       "patch": {
         "tags": [
-          "main"
+          "u-controller"
         ],
         "summary": "Partially update a specific U instance by ID",
         "parameters": [
@@ -145,7 +140,7 @@
             "schema": {
               "type": "string"
             },
-            "example": 123
+            "example": "f1251a28-50e8-4f74-878e-ac6db1b1591a"
           }
         ],
         "requestBody": {
@@ -160,7 +155,7 @@
         },
         "responses": {
           "200": {
-            "description": "U instance updated successfully",
+            "description": "U instance updated successfully.",
             "content": {
               "application/json": {
                 "example": {
@@ -184,7 +179,7 @@
       },
       "delete": {
         "tags": [
-          "main"
+          "u-controller"
         ],
         "summary": "Delete a specific U instance by ID",
         "parameters": [
@@ -195,12 +190,75 @@
             "schema": {
               "type": "string"
             },
-            "example": 123
+            "example": "5fa51ebe-10f8-4b14-9409-996ef9140395"
           }
         ],
         "responses": {
           "204": {
-            "description": "U instance deleted successfully"
+            "description": "U instance deleted successfully.",
+            "content": {
+              "application/json": {
+                "example": {}
+              }
+            }
+          },
+          "500": {
+            "description": "U instance not found.",
+            "content": {
+              "application/json": {
+                "example": {}
+              }
+            }
+          }
+        }
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "U": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "email": {
+            "type": "string"
+          },
+          "nickname": {
+            "type": "string"
+          },
+          "dateOfBirth": {
+            "type": "string",
+            "format": "date"
+          },
+          "age": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "nativeLanguage": {
+            "type": "string"
+          },
+          "subscription": {
+            "type": "string"
+          },
+          "registrationMethod": {
+            "type": "string"
+          },
+          "isActive": {
+            "type": "boolean"
+          },
+          "verificationCode": {
+            "type": "string"
+          },
+          "words": {
+            "uniqueItems": true,
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "uuid"
+            }
           }
         }
       }
